# Rocket-with-Rust

./: Cargo.toml
src/: main.rs
src/context/: db_context.rs
src/db_/: connection_string.rs
src/get_json_value/: get_static_json_value.rs
src/router/: route.rs
src/static/: setting.json
