[package]
name = "cargo_rust_with_rocket_restapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ="1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_derive ="1.0"
rocket = "0.5.0-rc.2"
mongodb = "2.3.0"